--- a/src/layout/Layout/Layout.module.css
+++ b/src/layout/Layout/Layout.module.css
@@ -45,7 +45,7 @@
 }
 
 .avatar {
-  margin-bottom: 20px;
+  margin: 0 auto;
   filter: drop-shadow(0px 8px 40px rgba(255, 197, 41, 0.25));
 }
 
@@ -64,4 +64,9 @@
   font-weight: 400;
   line-height: normal;
   color: #9ea1b1;
+}
+
+.content {
+  padding: 40px 60px;
+  width: 100%;
 }
