--- a/src/pages/Menu/Menu.module.css
+++ b/src/pages/Menu/Menu.module.css
@@ -2,3 +2,11 @@
   display: flex;
   justify-content: space-between;
 }
+
+.menu-list {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  padding: 20px 0;
+  justify-content: center;
+}
