--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -4,7 +4,7 @@
   border-radius: 28px;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 400;
+  font-weight: 600;
   font-family: inherit;
   background-color: var(--primary-color);
   cursor: pointer;
@@ -14,6 +14,7 @@
 .big {
   padding: 20px 60px;
   text-transform: uppercase;
+  border-radius: 36px;
 }
 
 .small {
