--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -1,7 +1,8 @@
 .header {
   position: relative;
   min-height: 165px;
-  border-radius: 19px;
+  border-radius: 19px 19px 0 0;
+  background-size: cover;
 }
 
 .card {
