--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
   --base-color: #ffffff;
   --text-color: #000000;
   --text-secondary-color: #5b5b5e;
-  --separator-color: #d4d6e0;
+  --text-gray-color: #a1a1a9;
+  --separator-color: #b5b8c5;
   --white-color: #dfe3f3;
 }
 
