--- a/src/layout/PageLayout/PageLayout.module.css
+++ b/src/layout/PageLayout/PageLayout.module.css
@@ -63,7 +63,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  color: #9ea1b1;
+  color: var(--text-gray-color);
 }
 
 .content {
@@ -71,4 +71,15 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.cart-counter {
+  background-color: var(--primary-color);
+  color: var(--text-color);
+  border-radius: 1rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
