--- a/src/components/molecules/CartItem/CartItem.module.css
+++ b/src/components/molecules/CartItem/CartItem.module.css
@@ -1,25 +1,25 @@
-.header {
-  position: relative;
-  min-height: 165px;
-  border-radius: 19px 19px 0 0;
-  background-size: cover;
+.list {
+  display: flex;
 }
 
-.card {
+.item {
+  display: flex;
   background: var(--white-color);
   border-radius: 19px;
   box-shadow: 18.21428680419922px 18.21428680419922px 36.42857360839844px 0px
     rgba(211, 209, 216, 0.25);
-  width: 320px;
 }
 
-.footer {
-  padding: 12px;
+.image {
+  height: 85px;
+  width: 85px;
+  border-radius: 19px;
+  background-size: contain;
 }
 
 .title {
   color: var(--text-color);
-  font-size: 18.214px;
+  font-size: 18px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -33,14 +33,7 @@
   line-height: normal;
 }
 
-.link {
-  text-decoration: none;
-}
-
 .price {
-  position: absolute;
-  top: 15px;
-  left: 15px;
   background: var(--white-color);
   padding: 3px 10px;
   border-radius: 20px;
@@ -53,22 +46,6 @@
 
 .currency {
   color: var(--primary-color);
-}
-
-.rating {
-  position: absolute;
-  bottom: 12px;
-  left: 15px;
-  background: var(--white-color);
-  padding: 3px 8px;
-  border-radius: 20px;
-  color: var(--text-color);
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  box-shadow: 0px 6.0714287757873535px 24.285715103149414px 0px
-    rgba(254, 114, 76, 0.2);
 }
 
 .add-to-cart {
