--- a/src/components/molecules/CartItem/CartItem.module.css
+++ b/src/components/molecules/CartItem/CartItem.module.css
@@ -4,62 +4,62 @@
 
 .item {
   display: flex;
-  background: var(--white-color);
+  width: 100%;
   border-radius: 19px;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: normal;
+  background: var(--white-color);
   box-shadow: 18.21428680419922px 18.21428680419922px 36.42857360839844px 0px
     rgba(211, 209, 216, 0.25);
+  margin-bottom: 16px;
+  gap: 20px;
+  font-style: normal;
 }
 
 .image {
-  height: 85px;
-  width: 85px;
+  width: 100px;
+  height: 100px;
   border-radius: 19px;
-  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.info {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .title {
   color: var(--text-color);
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-}
-
-.description {
-  color: var(--text-secondary-color);
-  font-size: 14.571px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
 }
 
 .price {
-  background: var(--white-color);
-  padding: 3px 10px;
-  border-radius: 20px;
-  color: var(--text-color);
   font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  font-weight: 600;
+  color: var(--primary-color);
 }
 
 .currency {
   color: var(--primary-color);
 }
 
-.add-to-cart {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  background: var(--primary-color);
-  border-radius: 50%;
-  width: 34px;
-  height: 34px;
-  border: none;
-  cursor: pointer;
+.controls {
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+  margin-right: 10px;
+  gap: 5px;
 }
 
-.add-to-cart:hover {
-  background: var(--primary-hover-color);
+.minus {
+  border: 1px solid var(--primary-color);
+  /* color: var(--primary-color); */
+  color: var(--primary-color);
+  background: none;
+}
+.plus {
+  color: var(--white-color);
 }
