--- a/src/components/molecules/CartItem/CartItem.module.css
+++ b/src/components/molecules/CartItem/CartItem.module.css
@@ -56,10 +56,17 @@
 
 .minus {
   border: 1px solid var(--primary-color);
-  /* color: var(--primary-color); */
   color: var(--primary-color);
   background: none;
 }
 .plus {
   color: var(--white-color);
+}
+.transparent {
+  border: none;
+  background: none;
+}
+.transparent:hover {
+  border: none;
+  background: none;
 }
